TEST_PROGRAMS/VALID/05/if_stmt_else_rob_brace.go
/* If statements */

package main

func main() {
	x := true

	/* Robillard braces on else, statement */

	if z:= true; x {
		println(z)
	} else 
	{
		println(x)
	}
}
