TEST_PROGRAMS/INVALID/04/100.go
package main

func main() {
    var x = 2

    // No semicolon
    switch x := 4 { }


}
